# verifhir-governance-layer

./: ARCHITECTURE.md  LICENSE  README.md  TEST_FALLBACK_README.md  VeriFHIR_ImagineCup.txt  VeriFHIR_imaginecup.docx  additions.docx  additions.txt  app.py  auditlog.docx  check_system_health.py  demo_fallback.py  demo_redaction.py  demo_rule_only_pipeline.py  demo_week1.py  demo_week2.py  pyproject.toml  requirements.txt  requirments.txt  stress_test.py  test_fallback_direct.py  test_fallback_streamlit.py  test_fallback_stress.py  verifhir-governance-layer - Shortcut.lnk
.refactoring_backups/: app.py.backup_20260104_221239  app.py.backup_20260104_224138
secure_vault/: record_1333492fd572155b_1766602119.json  record_17095431b6c8d02b_1766757052.json  record_17095431b6c8d02b_1766840463.json  record_17095431b6c8d02b_1766840471.json  record_17095431b6c8d02b_1766891836.json  record_17095431b6c8d02b_1766902764.json  record_17095431b6c8d02b_1766902813.json  record_17095431b6c8d02b_1766971858.json  record_17095431b6c8d02b_1767176423.json  record_17095431b6c8d02b_1767322468.json  record_17095431b6c8d02b_1767322474.json  record_3ec416361913f29a_1767492772.json  record_9a990b707f4a1f3e_1766756812.json  record_b7a29d64c9520891_1767993244.json  record_d45e245fa3a47a99_1766843225.json  record_dda01e3aee265afc_1766591478.json  record_e8976222296770f4_1767617902.json  record_f565d8edc0894c8d_1766734137.json
tests/: test_allow_list.py  test_api.py  test_audit_builder.py  test_audit_hash_determinism.py  test_audit_integrity.py  test_audit_replay.py  test_azure_phi_smoke.py  (+22 more)
(+78 files in other folders)
