[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verifhir"
version = "0.1.0"
description = "Deterministic governance layer for cross-border healthcare data"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["verifhir*"]
